k8s/queue-job.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue-job
  namespace: zupikas
  labels:
    app: queue-job
spec:
  replicas: 2
  selector:
    matchLabels:
      app: queue-job
  template:
    metadata:
      labels:
        app: queue-job
    spec:
      containers:
        - name: queue-job
          image: 431546822103.dkr.ecr.us-west-1.amazonaws.com/tc-queue-job-dev:latest
          ports:
            - containerPort: 3334
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 3334
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 3334
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: queue-job
  namespace: zupikas
spec:
  selector:
    app: queue-job
  ports:
    - port: 3334
      targetPort: 3334
  type: ClusterIP
